<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:defaultValue="72"
        android:key="options.alothashacr"
        android:title="@string/allot_hashchar_text"
        android:summary="@string/allot_hashchar_general_description"
        android:entries="@array/alothashacr_entry_list"
        android:entryValues="@array/alothashacr_entry_values" />

    <ListPreference
        android:defaultValue="72"
        android:key="options.sunrise"
        android:title="@string/netz_hachama_text"
        android:summary="@string/netz_hachama_description"
        android:entries="@array/sun_level_entry_list"
        android:entryValues="@array/sun_level_entry_values" />

    <ListPreference
        android:defaultValue="1"
        android:key="options.zmain.tephila"
        android:title="@string/zman_tephila_text"
        android:summary="@string/zman_tephila_description"
        android:entries="@array/zman_tephila_entry_list"
        android:entryValues="@array/zman_tephila_entry_values" />

    <ListPreference
        android:defaultValue="1"
        android:key="options.plag.mincha"
        android:title="@string/plag_mincha_text"
        android:summary="@string/plag_mincha_description"
        android:entries="@array/plag_mincha_entry_list"
        android:entryValues="@array/plag_mincha_entry_values" />

    <ListPreference
        android:defaultValue="1"
        android:key="options.sunset"
        android:title="@string/shekia_text"
        android:summary="@string/shekia_description"
        android:entries="@array/sun_level_entry_list"
        android:entryValues="@array/sun_level_entry_values" />

</PreferenceScreen>