<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <it.gmariotti.cardslib.library.view.CardViewNative
        android:id="@+id/card_add_location"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="@string/location_title_hint"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_caption"
                android:layout_centerHorizontal="true">


                <AutoCompleteTextView
                    android:id="@+id/autocomplete_places"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="15"
                    android:hint="@string/location_address_hint"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/longitude_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_caption"
                android:layout_alignLeft="@+id/address_caption"
                android:layout_alignStart="@+id/address_caption">

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/latitude_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_caption"
                android:layout_toRightOf="@+id/longitude_caption"
                android:layout_toEndOf="@+id/longitude_caption">

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_add_black_24dp"
                app:borderWidth="0dp"
                app:fabSize="normal"
                app:backgroundTint="@color/material_blue_grey_800"
                app:layout_anchor="@id/latitude_caption"
                app:layout_anchorGravity="bottom|end"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:layout_alignRight="@+id/address_caption"
                android:layout_alignEnd="@+id/address_caption"
                android:checked="false" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual_location"
                android:id="@+id/switch1"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/longitude_caption"
                android:layout_alignStart="@+id/longitude_caption" />

            <EditText
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/location_longitude_hint"
                android:inputType="number"
                android:layout_below="@+id/switch1"
                android:layout_alignLeft="@+id/switch1"
                android:layout_alignStart="@+id/switch1" />

            <EditText
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/location_latitude_hint"
                android:inputType="number"
                android:layout_alignTop="@+id/longitude"
                android:layout_toRightOf="@+id/longitude"
                android:layout_toEndOf="@+id/longitude" />

            <EditText
                android:id="@+id/timezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/location_timzone_hint"
                android:layout_below="@+id/longitude"
                android:layout_alignLeft="@+id/longitude"
                android:layout_alignStart="@+id/longitude" />
        </RelativeLayout>
    </it.gmariotti.cardslib.library.view.CardViewNative>


</android.support.design.widget.CoordinatorLayout>