<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:gravity="left">

    <ImageView
        android:id="@+id/notifimage"
        android:paddingTop="10dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/luach"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="2dp" />


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/notifimage"
        android:paddingRight="5dp"
        android:columnCount="3">

        <TextView
            android:id="@+id/jdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="jdate"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="0"
            android:textSize="18sp"
            android:textColor="@android:color/background_dark"
            android:gravity="center|center_horizontal"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="sunrize_"
            android:layout_column="0"
            android:layout_row="1"
            android:textSize="15sp"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:text="middle_"
            android:layout_column="1"
            android:layout_row="1"
            android:textSize="15sp"
            android:textColor="@android:color/background_dark"
            style="@style/textMargins"
            android:layout_columnWeight="4" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="right"
            android:text="sunset_"
            android:layout_column="2"
            android:layout_row="1"
            android:textSize="17sp"
            android:textColor="@android:color/background_dark" />


        <TextView
            android:id="@+id/netzText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/netz_hachama_text"
            android:layout_column="0"
            android:layout_row="2"
            android:textSize="12sp"
            android:textColor="#939393"
            android:elevation="1dp" />

        <TextView
            android:id="@+id/chzotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:text="@string/chaztot_text"
            android:layout_column="1"
            android:layout_row="2"
            android:textSize="12sp"
            android:textColor="#939393"
            android:layout_columnWeight="4"
            android:elegantTextHeight="false"
            android:elevation="5dp"
            style="@style/textMargins"
            android:gravity="center|center_horizontal" />

        <TextView
            android:id="@+id/sunsetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="right"
            android:text="@string/shekia_text"
            android:layout_column="2"
            android:layout_row="2"
            android:textSize="12sp"
            android:textColor="#939393"
            android:elevation="1dp" />

    </GridLayout>
</RelativeLayout>